# routes/statistics.js
@@ -1,0 +1,6 @@
+const router = require("express").Router();
+const StatsController = require("../controllers/Stats.Controller");
+
+router.get("/groupByDate", StatsController.groupByDate);
+
+module.exports = router;
